# static-dict

./: .gitignore  LICENSE  README.md  static-dict.cabal
src/Data/: Dict.hs
src/Data/Dict/: FKS.hs  Linear.hs
test/: PerfTest.hs  UnitTest.hs
test/Tests/: Data.hs
test/Tests/Data/: Dict.hs
test/Tests/Data/Dict/: FKS.hs
