Name:                   static-dict
Category:               Data, Data Structures
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               Fast Static Integer Dictionaries
Homepage:               https://github.com/emc2/static-dict
Bug-Reports:            https://github.com/emc2/static-dict/issues
Copyright:              Copyright (c) 2014 Eric McCorkle.  All rights reserved.
Description:
  This library provides an interface for static dictionaries, along with an implementation
  based on FKS hashing schemes.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/static-dict.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, array, bitwise, random,
                        HUnit-Plus, containers

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, array, bitwise, random
  exposed-modules:      Data.Dict
                        Data.Dict.FKS
